--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 		<main role="main">
 			<div class="card">
 				<figure class="hero__wrapper">
-					<img class="hero" src="./images/illustration-hero.svg" alt="" />
+					<img
+						class="hero"
+						src="./images/illustration-hero.svg"
+						alt="hero image"
+					/>
 				</figure>
 				<h2 class="title">Order Summary</h2>
 				<p class="paragraph">
