--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<img
 						class="hero"
 						src="./images/illustration-hero.svg"
-						alt="hero image"
+						alt="hero background illustration"
 					/>
 				</figure>
 				<h2 class="title">Order Summary</h2>
