--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</style>
 	</head>
 	<body>
-		<main role="main">
+		<main>
 			<div class="card">
 				<figure class="hero__wrapper">
 					<img
@@ -41,7 +41,7 @@
 						alt="hero background illustration"
 					/>
 				</figure>
-				<h2 class="title">Order Summary</h2>
+				<h1 class="title">Order Summary</h1>
 				<p class="paragraph">
 					You can now listen to millions of songs, audiobooks, and podcasts on
 					any device anywhere you like!
@@ -66,8 +66,8 @@
 					<p class="plan__price">$59.99/year</p>
 					<a href="#" class="order__link">Change</a>
 				</div>
-				<button class="btn--payment" role="button">Proceed to Payment</button>
-				<button class="btn--cancel" role="button">Cancel Order</button>
+				<button class="btn--payment">Proceed to Payment</button>
+				<button class="btn--cancel">Cancel Order</button>
 			</div>
 
 			<footer>
