--- a/index.html
+++ b/index.html
@@ -32,52 +32,50 @@
 		</style>
 	</head>
 	<body>
-		<main>
-			<div class="card">
-				<figure class="hero__wrapper">
-					<img
-						class="hero"
-						src="./images/illustration-hero.svg"
-						alt="hero background illustration"
-					/>
-				</figure>
-				<h1 class="title">Order Summary</h1>
-				<p class="paragraph">
-					You can now listen to millions of songs, audiobooks, and podcasts on
-					any device anywhere you like!
-				</p>
-				<div class="grid">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="48"
-						height="48"
-						class="plan__icon"
-					>
-						<g fill="none" fill-rule="evenodd">
-							<circle cx="24" cy="24" r="24" fill="#DFE6FB" />
-							<path
-								fill="#717FA6"
-								fill-rule="nonzero"
-								d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"
-							/>
-						</g>
-					</svg>
-					<h2 class="plan__text">Annual Plan</h2>
-					<p class="plan__price">$59.99/year</p>
-					<a href="#" class="order__link">Change</a>
-				</div>
-				<button class="btn--payment">Proceed to Payment</button>
-				<button class="btn--cancel">Cancel Order</button>
+		<div class="card">
+			<figure class="hero__wrapper">
+				<img
+					class="hero"
+					src="./images/illustration-hero.svg"
+					alt="hero background illustration"
+				/>
+			</figure>
+			<h1 class="title">Order Summary</h1>
+			<p class="paragraph">
+				You can now listen to millions of songs, audiobooks, and podcasts on any
+				device anywhere you like!
+			</p>
+			<div class="grid">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="48"
+					height="48"
+					class="plan__icon"
+				>
+					<g fill="none" fill-rule="evenodd">
+						<circle cx="24" cy="24" r="24" fill="#DFE6FB" />
+						<path
+							fill="#717FA6"
+							fill-rule="nonzero"
+							d="M32.574 15.198a.81.81 0 00-.646-.19L20.581 16.63a.81.81 0 00-.696.803V26.934a3.232 3.232 0 00-1.632-.44A3.257 3.257 0 0015 29.747 3.257 3.257 0 0018.253 33a3.257 3.257 0 003.253-3.253v-8.37l9.726-1.39v5.327a3.232 3.232 0 00-1.631-.441 3.257 3.257 0 00-3.254 3.253 3.257 3.257 0 003.254 3.253 3.257 3.257 0 003.253-3.253V15.81a.81.81 0 00-.28-.613z"
+						/>
+					</g>
+				</svg>
+				<h2 class="plan__text">Annual Plan</h2>
+				<p class="plan__price">$59.99/year</p>
+				<a href="#" class="order__link">Change</a>
 			</div>
+			<button class="btn--payment">Proceed to Payment</button>
+			<button class="btn--cancel">Cancel Order</button>
+		</div>
 
-			<footer>
-				<div class="attribution">
-					Challenge by
-					<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-						>Frontend Mentor</a
-					>. Coded by <a href="www.github.com/SProga">SProga</a>.
-				</div>
-			</footer>
-		</main>
+		<footer>
+			<div class="attribution">
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="www.github.com/SProga">SProga</a>.
+			</div>
+		</footer>
 	</body>
 </html>
